# conditional-tail-risk-pricing

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  DATA_ACCESS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
configs/: backtest.yaml  data_sources.yaml  feature_blocks.yaml  project.yaml
configs/models/: elastic_net.yaml  ipca.yaml  neural_sdf.yaml  xgboost.yaml
docs/: replication.md
docs/assets/: results_inventory.md  results_manifest.json
docs/assets/tables/: decile_shape.csv  double_ml_option_contribution.csv  factor_attribution.csv  feature_importance.csv  headline_results.csv  holdout_robustness.csv  reversal_validation.csv  signal_robustness.csv  strategy_variants.csv
notebooks/: 01_data_audit.ipynb  02_benchmark_reconciliation.ipynb  03_feature_diagnostics.ipynb  04_baseline_models.ipynb  05_ml_models.ipynb  06_sdf_results.ipynb  07_paper_figures.ipynb
scripts/: build_readme_assets.py  describe_wrds_tables.py  probe_option_surface_grid.py  probe_wrds_tables.py
scripts/amarel/: run_full.sh  run_results.sh  run_schema_audit.sh  run_smoke.sh  run_tests.sh  submit_existing_allocation.ps1
sql/wrds/: ccm_links.sql  compustat_funda.sql  compustat_fundq.sql  crsp_daily.sql  crsp_delists.sql  ff_benchmarks.sql  macro_rates.sql  optionmetrics_raw_chain.sql  optionmetrics_surface.sql
src/ctrsdf/: __init__.py  config.py  pipeline.py
src/ctrsdf/analysis/: __init__.py  (+1 more)
tests/: test_costs.py  test_ff12.py  test_portfolio.py  test_returns.py  test_secret_audit.py  test_splits.py
(+21 files in other folders)
