[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctrsdf"
version = "0.1.0"
description = "Conditional tail-risk pricing pipeline for U.S. equities."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Nima Taheri"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "PyYAML>=6",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "wrds>=3.2",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
ml = [
  "xgboost>=2.0",
  "torch>=2.1",
  "shap>=0.44",
  "optuna>=3.5",
]
dev = [
  "pytest>=8",
  "pre-commit>=3.7",
  "ruff>=0.4",
]
notebooks = [
  "ipykernel>=6",
  "ipython>=8",
]

[project.scripts]
ctrsdf = "ctrsdf.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
